force-app/main/default/objects/MX_SKY_MotivosdeRechazo__c/MX_SKY_MotivosdeRechazo__c.object-meta.xml
<CustomObject>
    <description>Almacena los registros que se tendrán por registro por motivos de rechazo</description>
    <label>Motivo de Rechazo</label>
    <nameField>
        <label>Motivo de Rechazo  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Motivos de Rechazo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>