force-app/main/default/objects/MX_SKY_MotivosdeRechazo__c/fields/MX_SKY_CuentaSiebel__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_CuentaSiebel__c</fullName>
    <description>Guarda la cuenta de Siebel</description>
    <label>Cuenta Siebel</label>
    <length>25</length>
    <type>Text</type>
</CustomField>