force-app/main/default/objects/MX_SKY_MotivosdeRechazo__c/fields/MX_SKY_Detalle__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_Detalle__c</fullName>
    <description>Utilizado para almacenar la respuesta del motivo de rechazo</description>
    <label>Detalle</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>