force-app/main/default/objects/MX_SKY_MotivosdeRechazo__c/fields/MX_SKY_Estatus__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_Estatus__c</fullName>
    <description>Estatus de la respuesta de la validación</description>
    <label>Estatus</label>
    <length>25</length>
    <type>Text</type>
</CustomField>