force-app/main/default/objects/MX_SKY_MotivosdeRechazo__c/fields/MX_SKY_LeadMotiv__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_LeadMotiv__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Utilizado para la relación entre lead y Motivo de rechazo</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Motivos de Rechazo</relationshipLabel>
    <relationshipName>Motivos_de_Rechazo</relationshipName>
    <type>Lookup</type>
</CustomField>