force-app/main/default/objects/MX_SKY_MotivosdeRechazo__c/fields/MX_SKY_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se ocupa para asociar los motivos de rechazo con la opp</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Motivos de Rechazo</relationshipLabel>
    <relationshipName>MX_SKY_MotivosRechazo</relationshipName>
    <type>Lookup</type>
</CustomField>