force-app/main/default/objects/MX_SKY_MotivosdeRechazo__c/fields/MX_SKY_Rechazos__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_Rechazos__c</fullName>
    <description>Es la relación entre los catalogos de los rechazos y los motivos de rechazos</description>
    <label>Rechazos</label>
    <referenceTo>MX_SKY_Rechazos__c</referenceTo>
    <relationshipLabel>Motivos de Rechazo</relationshipLabel>
    <relationshipName>Rechazos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>