force-app/main/default/objects/MX_SKY_MotivosdeRechazo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>MX_SKY_Detalle__c</columns>
    <columns>MX_SKY_CuentaSiebel__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>MX_SKY_LeadMotiv__c</columns>
    <columns>MX_SKY_Oportunidad__c</columns>
    <columns>MX_SKY_Rechazos__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>